--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@emailjs/browser": "^3.11.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/material": "^5.14.6",
     "@mui/styled-engine-sc": "^5.14.6",
     "animate.css": "^4.1.1",
     "emailjs-com": "^3.2.0",
     "firebase": "^10.3.0",
+    "font-awesome": "^4.7.0",
     "keen-slider": "^6.8.6",
     "pdf-lib": "^1.17.1",
     "react": "^18.2.0",
@@ -29,6 +31,7 @@
     "react-router-dom": "^6.15.0",
     "react-scroll": "^1.8.9",
     "react-scroll-to-top": "^3.0.0",
+    "react-toastify": "^9.1.3",
     "styled-components": "^5.3.11",
     "swiper": "^10.2.0"
   },
