--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.14.6",
     "@mui/styled-engine-sc": "^5.14.6",
     "animate.css": "^4.1.1",
+    "axios": "^1.5.0",
     "emailjs-com": "^3.2.0",
     "firebase": "^10.3.0",
     "font-awesome": "^4.7.0",
