--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/material": "^5.14.6",
     "@mui/styled-engine-sc": "^5.14.6",
+    "@tailwindcss/typography": "^0.5.10",
     "animate.css": "^4.1.1",
     "axios": "^1.5.0",
     "emailjs-com": "^3.2.0",
