--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-scroll-to-top": "^3.0.0",
     "react-toastify": "^9.1.3",
     "styled-components": "^5.3.11",
+    "sweetalert2": "^11.7.27",
     "swiper": "^10.2.0"
   },
   "devDependencies": {
